--- a/index.html
+++ b/index.html
@@ -426,100 +426,102 @@
   <!-- ======================Footer========================= -->
   <footer>
     <div class="container">
-      <div class="grid-5 grid">
-        <div class="footer-item">
-          <div class="footer-item-header">
-            <h3>Pages</h3>
-          </div>
-          <div class="footer-item-body">
-            <ul class="links">
-              <li><a href="#">Theme Features</a></li>
-              <li><a href="#">Content Examples</a></li>
-              <li><a href="#">Add Multiple SKUs</a></li>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Contact Us</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">Sitemap</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="footer-item">
-          <div class="footer-item-header">
-            <h3>Categories</h3>
-          </div>
-          <div class="footer-item-body">
-            <ul class="links">
-              <li><a href="#">Automotive</a></li>
-              <li><a href="#">Sports Nutrition</a></li>
-              <li><a href="#">Cosmetics</a></li>
-              <li><a href="#">Health and Beauty</a></li>
-              <li><a href="#">DIY</a></li>
-              <li><a href="#">Computers</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="footer-item">
-          <div class="footer-item-header">
-            <h3>Popular Brands</h3>
-          </div>
-          <div class="footer-item-body">
-            <ul class="links">
-              <li><a href="#">Valve</a></li>
-              <li><a href="#">Flux</a></li>
-              <li><a href="#">Master Wheel</a></li>
-              <li><a href="#">Penta</a></li>
-              <li><a href="#">KwikScope</a></li>
-              <li><a href="#">FixSharp</a></li>
-              <li><a href="#">Pro Guard</a></li>
-              <li><a href="#">Rainbow</a></li>
-              <li><a href="#">Black Label</a></li>
-              <li><a href="#">Genitech</a></li>
-              <li><a href="#">View All</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="footer-item">
-          <div class="footer-item-header">
-            <h3>Info</h3>
-          </div>
-          <div class="footer-item-body">
-            <ul class="links">
-              <li><a href="#">Head Office</a></li>
-              <li><a href="#">Main Street</a></li>
-              <li><a href="#">Downtown</a></li>
-              <li><a href="#">Manikganj-1800, Dhaka, BD</a></li>
-              <li><strong>Call us: +88017-63408494</strong></li>
-            </ul>
-          </div>
-        </div>
-        <div class="footer-item">
-          <div class="footer-item-header">
-            <h3>Subscribe to our newsletter</h3>
-          </div>
-          <div class="footer-item-body">
-            <div class="footer-desc">
-              <p>Get the latest updates on new products and upcoming sales</p>
+      <div class="footer-content">
+        <div class="grid-5 grid">
+          <div class="footer-item">
+            <div class="footer-item-header">
+              <h3>Pages</h3>
             </div>
-            <div class="email-box">
-              <form>
-                <div class="input-box">
-                  <input type="email" name="email" placeholder="Your email address">
-                  <button type="submit">Subscribe</button>
-                </div>
-              </form>
+            <div class="footer-item-body">
+              <ul class="links">
+                <li><a href="#">Theme Features</a></li>
+                <li><a href="#">Content Examples</a></li>
+                <li><a href="#">Add Multiple SKUs</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Sitemap</a></li>
+              </ul>
             </div>
-            <div class="footer-social">
-              <div class="social-heading">
-                <h3>Follow Us</h3>
+          </div>
+          <div class="footer-item">
+            <div class="footer-item-header">
+              <h3>Categories</h3>
+            </div>
+            <div class="footer-item-body">
+              <ul class="links">
+                <li><a href="#">Automotive</a></li>
+                <li><a href="#">Sports Nutrition</a></li>
+                <li><a href="#">Cosmetics</a></li>
+                <li><a href="#">Health and Beauty</a></li>
+                <li><a href="#">DIY</a></li>
+                <li><a href="#">Computers</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer-item">
+            <div class="footer-item-header">
+              <h3>Popular Brands</h3>
+            </div>
+            <div class="footer-item-body">
+              <ul class="links">
+                <li><a href="#">Valve</a></li>
+                <li><a href="#">Flux</a></li>
+                <li><a href="#">Master Wheel</a></li>
+                <li><a href="#">Penta</a></li>
+                <li><a href="#">KwikScope</a></li>
+                <li><a href="#">FixSharp</a></li>
+                <li><a href="#">Pro Guard</a></li>
+                <li><a href="#">Rainbow</a></li>
+                <li><a href="#">Black Label</a></li>
+                <li><a href="#">Genitech</a></li>
+                <li><a href="#">View All</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer-item">
+            <div class="footer-item-header">
+              <h3>Info</h3>
+            </div>
+            <div class="footer-item-body">
+              <ul class="links">
+                <li><a href="#">Head Office</a></li>
+                <li><a href="#">Main Street</a></li>
+                <li><a href="#">Downtown</a></li>
+                <li><a href="#">Manikganj-1800, Dhaka, BD</a></li>
+                <li><strong>Call us: +88017-63408494</strong></li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer-item">
+            <div class="footer-item-header">
+              <h3>Subscribe to our newsletter</h3>
+            </div>
+            <div class="footer-item-body">
+              <div class="footer-desc">
+                <p>Get the latest updates on new products and upcoming sales</p>
               </div>
-              <div class="link">
-                <ul>
-                  <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                  <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                  <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                  <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                </ul>
+              <div class="email-box">
+                <form>
+                  <div class="input-box">
+                    <input type="email" name="email" placeholder="Your email address">
+                    <button type="submit">Subscribe</button>
+                  </div>
+                </form>
+              </div>
+              <div class="footer-social">
+                <div class="social-heading">
+                  <h3>Follow Us</h3>
+                </div>
+                <div class="link">
+                  <ul>
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
