--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
           </div>
         </div>
       </div>
+      <div class="mobile-search">
+        <div class="containers">
+          <div class="search-box">
+            <form>
+              <div class="input-box">
+                <input type="search" name="search" placeholder="Search by keyward, brand or SKUs">
+                <button type="submit"><i class="fa fa-search"></i></button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- Navbar -->
     <nav>
