--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       <div class="containers fh">
         <div class="topnav-focus-content">
           <div class="topnav-left">
+            <div class="burger">
+              <i class="fa fa-bars"></i>
+            </div>
             <div class="logo">
               <a href="index.html"><img src="/img/logo.svg"></a>
             </div>
@@ -42,10 +45,10 @@
           </div>
           <div class="topnav-right">
             <ul class="account">
-              <li>
+              <li class="none-mobile">
                 <a href="#"><i class="fa fa-gift"></i></a>
               </li>
-              <li>
+              <li class="none-mobile">
                 <a href="#"><i class="fa fa-user"></i></a>
               </li>
               <li class="cart">
@@ -436,6 +439,7 @@
   <!-- ======================End Header========================= -->
 
   <!-- ======================Footer========================= -->
+  <div style="padding: 100px 0;"></div>
   <footer>
     <div class="container">
       <div class="footer-content">
