--- a/index.html
+++ b/index.html
@@ -504,207 +504,10 @@
       <div class="section-heading">
         <h3>Featured Products</h3>
       </div>
-       <div class="products-5 grid">
-         <article>
-           <div class="card">
-             <div class="card-header">
-              <a href="#">
-                 <div class="card-img">
-                   <img src="/img/products/diy4-artboard-44__22358.1551884827 (1).png">
-                   <div class="card-img-overlay">
-                     <a href="#" class="btn">Quick View</a>
-                   </div>
-                   <div class="sale">
-                     <span>Sale</span>
-                   </div>
-                 </div>
-              </a>
-             </div>
-             <div class="card-body">
-               <div class="card-qr">
-                 <ul>
-                   <li><span>KawikScope</span></li>
-                   <li><span> SKU: 100HORH875DY</span></li>
-                 </ul>
-               </div>
-               <div class="card-title">
-                 <a href="#">39cm 100cc Hand-Propelled Rotary Petrol Lawn Mower</a>
-               </div>
-             </div>
-             <div class="card-footer">
-               <div class="card-price">
-                <h4 class="was-price"><del>$49.41</del></h4>
-                 <h3 class="present-price">$32.50</h3>
-               </div>
-               <div class="add-cart">
-                 <a href="#" class="btn">Add To Cart</a>
-               </div>
-               <div class="add-wishlist">
-                 <a href="#" class="btn">Add To Your List <i class="fa fa-star-o"></i></a>
-               </div>
-             </div>
-           </div>
-         </article>
-         <article>
-           <div class="card">
-             <div class="card-header">
-              <a href="#">
-                 <div class="card-img">
-                   <img src="/img/products/diy4-artboard-44__22358.1551884827 (1).png">
-                   <div class="card-img-overlay">
-                     <a href="#" class="btn">Quick View</a>
-                   </div>
-                   <div class="sale">
-                     <span>Sale</span>
-                   </div>
-                 </div>
-              </a>
-             </div>
-             <div class="card-body">
-               <div class="card-qr">
-                 <ul>
-                   <li><span>KawikScope</span></li>
-                   <li><span> SKU: 100HORH875DY</span></li>
-                 </ul>
-               </div>
-               <div class="card-title">
-                 <a href="#">39cm 100cc Hand-Propelled Rotary Petrol Lawn Mower</a>
-               </div>
-             </div>
-             <div class="card-footer">
-               <div class="card-price">
-                <h4 class="was-price"><del>$49.41</del></h4>
-                 <h3 class="present-price">$32.50</h3>
-               </div>
-               <div class="add-cart">
-                 <a href="#" class="btn">Add To Cart</a>
-               </div>
-               <div class="add-wishlist">
-                 <a href="#" class="btn">Add To Your List <i class="fa fa-star-o"></i></a>
-               </div>
-             </div>
-           </div>
-         </article>
-         <article>
-           <div class="card">
-             <div class="card-header">
-              <a href="#">
-                 <div class="card-img">
-                   <img src="/img/products/diy4-artboard-44__22358.1551884827 (1).png">
-                   <div class="card-img-overlay">
-                     <a href="#" class="btn">Quick View</a>
-                   </div>
-                   <div class="sale">
-                     <span>Sale</span>
-                   </div>
-                 </div>
-              </a>
-             </div>
-             <div class="card-body">
-               <div class="card-qr">
-                 <ul>
-                   <li><span>KawikScope</span></li>
-                   <li><span> SKU: 100HORH875DY</span></li>
-                 </ul>
-               </div>
-               <div class="card-title">
-                 <a href="#">39cm 100cc Hand-Propelled Rotary Petrol Lawn Mower</a>
-               </div>
-             </div>
-             <div class="card-footer">
-               <div class="card-price">
-                <h4 class="was-price"><del>$49.41</del></h4>
-                 <h3 class="present-price">$32.50</h3>
-               </div>
-               <div class="add-cart">
-                 <a href="#" class="btn">Add To Cart</a>
-               </div>
-               <div class="add-wishlist">
-                 <a href="#" class="btn">Add To Your List <i class="fa fa-star-o"></i></a>
-               </div>
-             </div>
-           </div>
-         </article>
-         <article>
-           <div class="card">
-             <div class="card-header">
-              <a href="#">
-                 <div class="card-img">
-                   <img src="/img/products/diy4-artboard-44__22358.1551884827 (1).png">
-                   <div class="card-img-overlay">
-                     <a href="#" class="btn">Quick View</a>
-                   </div>
-                   <div class="sale">
-                     <span>Sale</span>
-                   </div>
-                 </div>
-              </a>
-             </div>
-             <div class="card-body">
-               <div class="card-qr">
-                 <ul>
-                   <li><span>KawikScope</span></li>
-                   <li><span> SKU: 100HORH875DY</span></li>
-                 </ul>
-               </div>
-               <div class="card-title">
-                 <a href="#">39cm 100cc Hand-Propelled Rotary Petrol Lawn Mower</a>
-               </div>
-             </div>
-             <div class="card-footer">
-               <div class="card-price">
-                <h4 class="was-price"><del>$49.41</del></h4>
-                 <h3 class="present-price">$32.50</h3>
-               </div>
-               <div class="add-cart">
-                 <a href="#" class="btn">Add To Cart</a>
-               </div>
-               <div class="add-wishlist">
-                 <a href="#" class="btn">Add To Your List <i class="fa fa-star-o"></i></a>
-               </div>
-             </div>
-           </div>
-         </article>
-         <article>
-           <div class="card">
-             <div class="card-header">
-              <a href="#">
-                 <div class="card-img">
-                   <img src="/img/products/diy4-artboard-44__22358.1551884827 (1).png">
-                   <div class="card-img-overlay">
-                     <a href="#" class="btn">Quick View</a>
-                   </div>
-                   <div class="sale">
-                     <span>Sale</span>
-                   </div>
-                 </div>
-              </a>
-             </div>
-             <div class="card-body">
-               <div class="card-qr">
-                 <ul>
-                   <li><span>KawikScope</span></li>
-                   <li><span> SKU: 100HORH875DY</span></li>
-                 </ul>
-               </div>
-               <div class="card-title">
-                 <a href="#">39cm 100cc Hand-Propelled Rotary Petrol Lawn Mower</a>
-               </div>
-             </div>
-             <div class="card-footer">
-               <div class="card-price">
-                <h4 class="was-price"><del>$49.41</del></h4>
-                 <h3 class="present-price">$32.50</h3>
-               </div>
-               <div class="add-cart">
-                 <a href="#" class="btn">Add To Cart</a>
-               </div>
-               <div class="add-wishlist">
-                 <a href="#" class="btn">Add To Your List <i class="fa fa-star-o"></i></a>
-               </div>
-             </div>
-           </div>
-         </article>
+       <div class="products-5 grid featured" id="featured">
+        <div class="loading" style="text-align: center;">
+          <div class="loader"></div>
+        </div>
        </div>
      </div>
    </section>
@@ -714,207 +517,10 @@
       <div class="section-heading">
         <h3>New Products</h3>
       </div>
-       <div class="products-5 grid">
-         <article>
-           <div class="card">
-             <div class="card-header">
-              <a href="#">
-                 <div class="card-img">
-                   <img src="/img/products/diy4-artboard-44__22358.1551884827 (1).png">
-                   <div class="card-img-overlay">
-                     <a href="#" class="btn">Quick View</a>
-                   </div>
-                   <div class="sale">
-                     <span>Sale</span>
-                   </div>
-                 </div>
-              </a>
-             </div>
-             <div class="card-body">
-               <div class="card-qr">
-                 <ul>
-                   <li><span>KawikScope</span></li>
-                   <li><span> SKU: 100HORH875DY</span></li>
-                 </ul>
-               </div>
-               <div class="card-title">
-                 <a href="#">39cm 100cc Hand-Propelled Rotary Petrol Lawn Mower</a>
-               </div>
-             </div>
-             <div class="card-footer">
-               <div class="card-price">
-                <h4 class="was-price"><del>$49.41</del></h4>
-                 <h3 class="present-price">$32.50</h3>
-               </div>
-               <div class="add-cart">
-                 <a href="#" class="btn">Add To Cart</a>
-               </div>
-               <div class="add-wishlist">
-                 <a href="#" class="btn">Add To Your List <i class="fa fa-star-o"></i></a>
-               </div>
-             </div>
-           </div>
-         </article>
-         <article>
-           <div class="card">
-             <div class="card-header">
-              <a href="#">
-                 <div class="card-img">
-                   <img src="/img/products/diy4-artboard-44__22358.1551884827 (1).png">
-                   <div class="card-img-overlay">
-                     <a href="#" class="btn">Quick View</a>
-                   </div>
-                   <div class="sale">
-                     <span>Sale</span>
-                   </div>
-                 </div>
-              </a>
-             </div>
-             <div class="card-body">
-               <div class="card-qr">
-                 <ul>
-                   <li><span>KawikScope</span></li>
-                   <li><span> SKU: 100HORH875DY</span></li>
-                 </ul>
-               </div>
-               <div class="card-title">
-                 <a href="#">39cm 100cc Hand-Propelled Rotary Petrol Lawn Mower</a>
-               </div>
-             </div>
-             <div class="card-footer">
-               <div class="card-price">
-                <h4 class="was-price"><del>$49.41</del></h4>
-                 <h3 class="present-price">$32.50</h3>
-               </div>
-               <div class="add-cart">
-                 <a href="#" class="btn">Add To Cart</a>
-               </div>
-               <div class="add-wishlist">
-                 <a href="#" class="btn">Add To Your List <i class="fa fa-star-o"></i></a>
-               </div>
-             </div>
-           </div>
-         </article>
-         <article>
-           <div class="card">
-             <div class="card-header">
-              <a href="#">
-                 <div class="card-img">
-                   <img src="/img/products/diy4-artboard-44__22358.1551884827 (1).png">
-                   <div class="card-img-overlay">
-                     <a href="#" class="btn">Quick View</a>
-                   </div>
-                   <div class="sale">
-                     <span>Sale</span>
-                   </div>
-                 </div>
-              </a>
-             </div>
-             <div class="card-body">
-               <div class="card-qr">
-                 <ul>
-                   <li><span>KawikScope</span></li>
-                   <li><span> SKU: 100HORH875DY</span></li>
-                 </ul>
-               </div>
-               <div class="card-title">
-                 <a href="#">39cm 100cc Hand-Propelled Rotary Petrol Lawn Mower</a>
-               </div>
-             </div>
-             <div class="card-footer">
-               <div class="card-price">
-                <h4 class="was-price"><del>$49.41</del></h4>
-                 <h3 class="present-price">$32.50</h3>
-               </div>
-               <div class="add-cart">
-                 <a href="#" class="btn">Add To Cart</a>
-               </div>
-               <div class="add-wishlist">
-                 <a href="#" class="btn">Add To Your List <i class="fa fa-star-o"></i></a>
-               </div>
-             </div>
-           </div>
-         </article>
-         <article>
-           <div class="card">
-             <div class="card-header">
-              <a href="#">
-                 <div class="card-img">
-                   <img src="/img/products/diy4-artboard-44__22358.1551884827 (1).png">
-                   <div class="card-img-overlay">
-                     <a href="#" class="btn">Quick View</a>
-                   </div>
-                   <div class="sale">
-                     <span>Sale</span>
-                   </div>
-                 </div>
-              </a>
-             </div>
-             <div class="card-body">
-               <div class="card-qr">
-                 <ul>
-                   <li><span>KawikScope</span></li>
-                   <li><span> SKU: 100HORH875DY</span></li>
-                 </ul>
-               </div>
-               <div class="card-title">
-                 <a href="#">39cm 100cc Hand-Propelled Rotary Petrol Lawn Mower</a>
-               </div>
-             </div>
-             <div class="card-footer">
-               <div class="card-price">
-                <h4 class="was-price"><del>$49.41</del></h4>
-                 <h3 class="present-price">$32.50</h3>
-               </div>
-               <div class="add-cart">
-                 <a href="#" class="btn">Add To Cart</a>
-               </div>
-               <div class="add-wishlist">
-                 <a href="#" class="btn">Add To Your List <i class="fa fa-star-o"></i></a>
-               </div>
-             </div>
-           </div>
-         </article>
-         <article>
-           <div class="card">
-             <div class="card-header">
-              <a href="#">
-                 <div class="card-img">
-                   <img src="/img/products/diy4-artboard-44__22358.1551884827 (1).png">
-                   <div class="card-img-overlay">
-                     <a href="#" class="btn">Quick View</a>
-                   </div>
-                   <div class="sale">
-                     <span>Sale</span>
-                   </div>
-                 </div>
-              </a>
-             </div>
-             <div class="card-body">
-               <div class="card-qr">
-                 <ul>
-                   <li><span>KawikScope</span></li>
-                   <li><span> SKU: 100HORH875DY</span></li>
-                 </ul>
-               </div>
-               <div class="card-title">
-                 <a href="#">39cm 100cc Hand-Propelled Rotary Petrol Lawn Mower</a>
-               </div>
-             </div>
-             <div class="card-footer">
-               <div class="card-price">
-                <h4 class="was-price"><del>$49.41</del></h4>
-                 <h3 class="present-price">$32.50</h3>
-               </div>
-               <div class="add-cart">
-                 <a href="#" class="btn">Add To Cart</a>
-               </div>
-               <div class="add-wishlist">
-                 <a href="#" class="btn">Add To Your List <i class="fa fa-star-o"></i></a>
-               </div>
-             </div>
-           </div>
-         </article>
+       <div class="products-5 grid newpro" id="newpro">
+        <div class="loading" style="text-align: center;">
+          <div class="loader"></div>
+        </div>
        </div>
      </div>
    </section>
